<resources>
    <string name="app_name">Challenge Games</string>
    <string name="title_activity_login">Logar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Logar</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Permissão para acesso a contatos necessária para habilitar email autocomplete"</string>
    <string name="bemvindo">Bem-vindo</string>
    <string name="registrar">Não tem conta? Crie uma</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="prompt_username">Username</string>
    <string name="usuario_invalido">Usuário inválido.</string>
    <string name="falha_internet">Faha de acesso a internet. Tente novamente em alguns instantes.</string>
    <string name="sair_aplicacao">Tem certeza que deseja sair da aplicação?</string>
    <string name="cancel">Cancelar</string>
    <string name="sair">Sair</string>
    <string name="confirmacao_email">Email não confirmado</string>
    <string name="aguarde">Aguarde...</string>
    <string name="comprar">COMPRAR</string>
    <string name="confirmacao_compra_titulo">Confirmação da Compra</string>
    <string name="confirmacao_label_id_ransaction">Num. da Compra:</string>
    <string name="confirmacao_label_product_name">Nome do Produto:</string>
    <string name="confirmacao_label_product_value">Valor do Produto:</string>
    <string name="confirma">Confirma</string>
    <string name="cancela">Cancela</string>
    <string name="fechar">Fechar</string>
    <string name="ok">OK</string>
    <string name="sem_conexao">Aparelho sem conexão de dados. Favor se conectar para prosseguir.</string>

    <!--Menu-->
    <string name="logout">Logout</string>
    <string name="minhas_compras">Minhas Compras</string>
    <string name="logout_message">Deseja realmente dar logout da aplicação?</string>

    //Compras
    <string name="compra_sucesso">Compra realizada com sucesso. Você receberá seu produto em até 10 dias úteis. Obrigado por comprar com a Challenge Games.</string>
    <string name="cancelar">Confirma</string>
    <string name="cancelar_compra_message">Você confirma o cancelamento desta compra?</string>
    <string name="cancelar_compra">Cancelar Compra</string>

    //Runtime Permissions
    <string name="permission_internet">Para continuar, autorize o acesso a Internet.</string>

</resources>
