<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="10dp"
    android:weightSum="1">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="@string/confirmacao_compra_titulo"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="111dp">

        <ImageView
            android:layout_width="100dp"
            android:id="@+id/confirmacaoImageViewProduto"
            android:layout_alignParentTop="true"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/confirmacaoImageViewProduto"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignBottom="@+id/confirmacaoImageViewProduto">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow android:id="@+id/firstFirstRow" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">

                    <TextView
                        android:text="@string/confirmacao_label_id_ransaction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:textSize="10sp" />
                </TableRow>

                <TableRow android:id="@+id/firstSecondRow" android:layout_width="match_parent"  android:layout_height="0dp" android:layout_weight="1">

                    <TextView
                        android:text="@string/confirmacao_label_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textSize="10sp" />
                </TableRow>

                <TableRow android:id="@+id/firstThirdRow" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">

                    <TextView
                        android:text="@string/confirmacao_label_product_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView9"
                        gra
                        android:textSize="10sp" />
                </TableRow>



            </TableLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TableRow android:id="@+id/firstRow" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
                    <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmaTextViewIdPayment"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow android:id="@+id/secondRow" android:layout_width="match_parent"  android:layout_height="match_parent" android:layout_weight="1">
                    <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmaTextViewProductName"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow android:id="@+id/thirdRow" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
                    <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmaTextViewProductValue"
                        android:layout_marginTop="5dp"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </TableRow>

            </TableLayout>
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:text="@string/confirma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="10dp" />

</LinearLayout>